# random-art-generator

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: dev-release.yml  nightly.yml  release.yml  stable-release.yml  test.yml
docs/: arguments.md  development.md  download.md  recreate.bat  running.md
src/: generator.rs  main.rs
src/generator/: mod.rs
src/generator/painter/: circle.rs  mod.rs  rect.rs  stroke.rs
src/generator/painter/circles/: mod.rs  shader.rs  shader.wgsl
src/generator/painter/rects/: mod.rs  shader.rs  shader.wgsl
src/generator/painter/strokes/: mod.rs  shader.rs  shader.wgsl
src/generator/utils/: benchmark.rs  color.rs  files.rs  formatting.rs  geom.rs  image.rs  mod.rs  parsing.rs  pixel.rs  random.rs  terminal.rs  units.rs
src/generator/utils/files/: encoder.rs  mod.rs  writer.rs
src/generator/utils/gpu/: buffer.rs  context.rs  encoder.rs  mod.rs  pipeline.rs  sampler.rs  texture.rs  workgroups.rs
src/generator/utils/gpu/blending/: mod.rs  shader.rs  shader.wgsl  shaders.rs  tests.rs
src/generator/utils/gpu/diff/: mod.rs  shader.rs  shader.wgsl  tests.rs
src/generator/utils/numbers/: average.rs  mod.rs  smooth.rs
src/generator/utils/random/: mod.rs  rng.rs
