[package]
name = "random-art-generator"
version = "0.6.0"
authors = ["Zeh Fernando <zeh@zehfernando.com>"]
homepage = "https://github.com/zeh/random-art-generator"
repository = "https://github.com/zeh/random-art-generator"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
bytes = "0.6.0"
color_processing = "0.4.1"
getrandom = "0.2"
image = "0.23.12"
img-parts = "0.2.3"
structopt = "0.3.9"
strum = "0.23"
strum_macros = "0.23"
