[package]
name = "random-art-generator"
version = "0.6.0"
authors = ["Zeh Fernando <zeh@zehfernando.com>"]
homepage = "https://github.com/zeh/random-art-generator"
repository = "https://github.com/zeh/random-art-generator"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
bytes = "0.6.0"
bytemuck = { version = "1.7.3", features = [ "derive" ] }
color_processing = "0.6.0"
futures-intrusive = "0.4.0"
getrandom = "0.2.4"
image = "0.23.14"
img-parts = "0.2.3"
num_enum = "0.5.6"
pollster = "0.2.5"
structopt = "0.3.25"
strum = "0.23"
strum_macros = "0.23.1"
wgpu = "0.13.1"
